--- a/template.yaml
+++ b/template.yaml
@@ -80,11 +80,11 @@ Outputs:
     Description: "Implicit IAM Role created for Hello World function"
     Value: !GetAtt FayeezResumeFunctionRole.Arn
   WebsiteURL:
-    Value: !GetAtt FayeezResumeChallengeBucket.WebsiteURL
+    Value: !GetAtt FrontEndBucket.WebsiteURL
     Description: URL for website hosted on S3
   FayeezResumeChallengeBucketSecureURL:
     Value: !Join
       - ''
       - - 'https://'
-        - !GetAtt FayeezResumeChallengeBucket.DomainName
+        - !GetAtt FrontEndBucket.DomainName
     Description: Name of S3 bucket to hold website content
