--- a/template.yaml
+++ b/template.yaml
@@ -137,3 +137,5 @@ Outputs:
       - - 'https://'
         - !GetAtt FrontEndBucket.DomainName
     Description: Name of S3 bucket to hold website content
+  WWWDomainNameURL:
+    Value: !GetAtt WWWBucket.DomainName
