--- a/template.yaml
+++ b/template.yaml
@@ -139,3 +139,5 @@ Outputs:
     Description: Name of S3 bucket to hold website content
   WWWDomainNameURL:
     Value: !GetAtt WWWBucket.DomainName
+  RootDomainName:
+    Value: !GetAtt RootDomainName
