--- a/template.yaml
+++ b/template.yaml
@@ -128,7 +128,7 @@ Outputs:
   FayeezResumeFunctionIamRole:
     Description: "Implicit IAM Role created for Hello World function"
     Value: !GetAtt FayeezResumeFunctionRole.Arn
-  WebsiteURL:
+  FrontEndBuckWebsiteURL:
     Value: !GetAtt FrontEndBucket.WebsiteURL
     Description: URL for website hosted on S3
   FayeezResumeChallengeBucketSecureURL:
@@ -139,5 +139,3 @@ Outputs:
     Description: Name of S3 bucket to hold website content
   WWWDomainNameURL:
     Value: !GetAtt WWWBucket.DomainName
-  RootDomainName:
-    Value: !GetAtt RootDomainName
