--- a/template.yaml
+++ b/template.yaml
@@ -127,10 +127,15 @@ Resources:
         Name: !Sub
             - www.${Domain}
             - Domain: !Ref RootDomainName
-        Type: CNAME
-        TTL: 60
-        ResourceRecords:
-        - !GetAtt WWWBucket.RegionalDomainName
+        Type: A
+        AliasTarget:
+          HostedZoneId: !FindInMap [ RegionMap, !Ref 'AWS::Region', S3hostedzoneID]
+          DNSName: !FindInMap [ RegionMap, !Ref 'AWS::Region', websiteendpoint]
+
+              #Type: CNAME
+              #TTL: 60
+              #ResourceRecords:
+              #- !GetAtt WWWBucket.RegionalDomainName
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
