need us east 1 for ACM cert with cloudfront

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -5,7 +5,8 @@ version = 0.1
 stack_name = "FayeezResumeSamDeploy"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-ti8jdnsgt1dw"
 s3_prefix = "FayeezResumeSamDeploy"
-region = "eu-west-1"
+region = "us-east-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
+parameter_overrides = "RootDomainName=\"fayeezresumechallenge.com\""
