--- a/template.yaml
+++ b/template.yaml
@@ -30,6 +30,9 @@ Mappings:
     eu-west-2:
       S3hostedzoneID: Z3GKZC51ZF0DB4
       websiteendpoint: s3-website.eu-west-2.amazonaws.com
+    us-east-1:
+      S3hostedzoneID: Z3AQBSTGFYJSTF
+      websiteendpoint: s3-website-us-east-1.amazonaws.com
 
 Resources:
   DomainCertificate: 
